[gd_scene load_steps=10 format=3 uid="uid://dvuvyhuo2u1rk"]

[ext_resource type="Script" uid="uid://daqokgparuuhy" path="res://scripts/chunk_manager.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://b33ji6l0xidsu" path="res://prefabs/loading_screen.tscn" id="2_sugp2"]
[ext_resource type="Script" uid="uid://cdhnspea4xqt3" path="res://scripts/ui/menuhandler.gd" id="3_jyhfs"]
[ext_resource type="FontFile" uid="uid://cp7he8k5yb88h" path="res://fonts/Inter/Inter.ttc" id="4_tbgi4"]

[sub_resource type="Environment" id="Environment_7dm0k"]
background_mode = 1
background_color = Color(0.5294118, 0.80784315, 0.92156863, 1)

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_ig7tw"]

[sub_resource type="Compositor" id="Compositor_0xm2m"]

[sub_resource type="LabelSettings" id="LabelSettings_7vrkn"]
font = ExtResource("4_tbgi4")
font_size = 89

[sub_resource type="LabelSettings" id="LabelSettings_ekxnf"]
font = ExtResource("4_tbgi4")

[node name="Main" type="Node"]

[node name="ChunkManager" type="Node" parent="."]
script = ExtResource("1_0wfyh")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7dm0k")
camera_attributes = SubResource("CameraAttributesPractical_ig7tw")
compositor = SubResource("Compositor_0xm2m")

[node name="LoadingScreen" parent="." node_paths=PackedStringArray("chunk_manager") instance=ExtResource("2_sugp2")]
chunk_manager = NodePath("../ChunkManager")

[node name="Sub Menu" type="Control" parent="." node_paths=PackedStringArray("pages", "render_distance_slider", "mouse_sensitivity_slider")]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_jyhfs")
pages = [NodePath("MainMenu"), NodePath("Settings")]
render_distance_slider = NodePath("Settings/ScrollContainer/SettingsMenu/RenderDistance/HSlider")
mouse_sensitivity_slider = NodePath("Settings/ScrollContainer/SettingsMenu/MouseSensitivity/HSlider")

[node name="Background" type="ColorRect" parent="Sub Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.21157849, 0.33685762, 0.5550242, 1)

[node name="Title" type="HBoxContainer" parent="Sub Menu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 21.0
offset_bottom = 130.0
grow_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="Sub Menu/Title"]
layout_mode = 2
text = "SSVE"
label_settings = SubResource("LabelSettings_7vrkn")

[node name="MainMenu" type="VBoxContainer" parent="Sub Menu"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -362.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 34
alignment = 1

[node name="ReturnToGame" type="Button" parent="Sub Menu/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Return To Game"

[node name="Settings" type="Button" parent="Sub Menu/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Settings"

[node name="BackToMenu" type="Button" parent="Sub Menu/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back To Main Menu"

[node name="Settings" type="VBoxContainer" parent="Sub Menu"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -527.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 34
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Sub Menu/Settings"]
custom_minimum_size = Vector2(750, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
horizontal_scroll_mode = 0

[node name="SettingsMenu" type="VBoxContainer" parent="Sub Menu/Settings/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RenderDistance" type="HBoxContainer" parent="Sub Menu/Settings/ScrollContainer/SettingsMenu"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Sub Menu/Settings/ScrollContainer/SettingsMenu/RenderDistance"]
layout_mode = 2
text = "Render Distance"
label_settings = SubResource("LabelSettings_ekxnf")

[node name="HSlider" type="HSlider" parent="Sub Menu/Settings/ScrollContainer/SettingsMenu/RenderDistance"]
custom_minimum_size = Vector2(250, 31.27)
layout_mode = 2
min_value = 1.0
max_value = 12.0
value = 1.0
rounded = true

[node name="MouseSensitivity" type="HBoxContainer" parent="Sub Menu/Settings/ScrollContainer/SettingsMenu"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Sub Menu/Settings/ScrollContainer/SettingsMenu/MouseSensitivity"]
layout_mode = 2
text = "Mouse Sensitivity"
label_settings = SubResource("LabelSettings_ekxnf")

[node name="HSlider" type="HSlider" parent="Sub Menu/Settings/ScrollContainer/SettingsMenu/MouseSensitivity"]
custom_minimum_size = Vector2(250, 31.27)
layout_mode = 2
max_value = 0.01
step = 0.001

[node name="Back" type="Button" parent="Sub Menu/Settings"]
layout_mode = 2
size_flags_horizontal = 4
text = "Go Back"

[connection signal="pressed" from="Sub Menu/MainMenu/ReturnToGame" to="Sub Menu" method="hide_menu"]
[connection signal="pressed" from="Sub Menu/MainMenu/Settings" to="Sub Menu" method="switch_page" binds= [1]]
[connection signal="pressed" from="Sub Menu/MainMenu/BackToMenu" to="Sub Menu" method="change_scene" binds= ["res://scenes/main_menu.tscn"]]
[connection signal="draw" from="Sub Menu/Settings" to="Sub Menu" method="load_settings_into_ui"]
[connection signal="hidden" from="Sub Menu/Settings" to="Sub Menu" method="save_settings_from_ui"]
[connection signal="pressed" from="Sub Menu/Settings/Back" to="Sub Menu" method="switch_page" binds= [0]]
